--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
 <header class="action">
     <div class="clearfix">
         <h1 id="logo" style="text-align: right;">
-          <div id="logo">
-            <img src="Images/ekpahall.png" height="50px" width="50px"></a>
-          </div>
+          
             <a href="../" style="text-decoration: none;color: white;margin-left: 10px;"> Ek PAHAL</a>
         </h1>
         <nav>
@@ -102,11 +100,11 @@
 <div id="main">
     <div id="">
         <section style="padding-bottom: 0px;">
-        <div class="backg" style="margin-top: 10px;padding-top: 7px;position: relative"> <div style="position: relative;"><br>
+        <div class="backg" style="margin-top: 0.2em;padding-top: 7px;position: relative"> <div style="position: relative;"><br>
 <h1 style="color: #7070ff;text-align: center;font-family:Dancing Script;font-weight: 600;font-size: 30px;"> <span style="color: #a0a000;font-size: 38;">Anwesha</span>- Education  beyond schooling</h1>
-  <div style="position: relative;padding-top: 9px;font-family:Droid Sans;font-weight: 400;padding-left: 10%;color: white;font-size: 20px;padding-right: 10%;">
+  <div style="position: relative;padding-top: 9px;font-family:Droid Sans;font-weight: 400;padding-left: 10%;color: white;font-size: 150%;padding-right: 10%;">
     Ek Pahal aims to universalise the resolution in every individuals, prosperity in every family, fearlessness in society and coexistence in nature through the method of education, community involvement and community building.<br><br><br><br><br><br><br>
-<p style="text-align: center;">Motto - For a healthy environment & better india</p><br><br><br>
+<p style="text-align: center;">Motto - For a healthy environment & better india</p><br><br>
   </div>
 </div>
 </div>
